<resources>
    <string name="app_name">Android 3 - MVVM, LiveData</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="about_me">Введите информацию о себе</string>
    <string name="Age">Age</string>
    <string name="Email">email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="add">add</string>
    <string name="changed_about_me">Введите свои изменения</string>
</resources>